# software_engineering

./: .gitignore  .pdm-python  README.md  main.py  pyproject.toml  simulate_data.py
